# AI-Analytics-Assistant

./: .gitignore  .replit  ARCHITECTURE_NOTES.md  README.md  app.py  pyproject.toml  replit.md
.github/workflows/: tests.yml
app/: app.py  ask_engine.py  home_content.py  llm_utils.py  style_utils.py
app/ui_components/: __init__.py  findings.py  header.py  metrics.py  plots.py  profile_utils.py  summary.py
attached_assets/: Pasted-Block-1-Add-basic-authentication-and-switch-to-your-own_1767160390452.txt  Pasted-Block-1-Add-distribution-and-top-k-insights-to-the-EDA-_1767162779075.txt  Pasted-Block-1-Create-a-Welcome-Home-page-and-polish-the-UI-NO_1767157629702.txt  Pasted-NON-NEGOTIABLE-CONSTRAINTS-READ-FIRST-DO-NOT-modify-any_1767149273393.txt  Pasted-NON-NEGOTIABLE-CONSTRAINTS-READ-FIRST-DO-NOT-modify-any_1767152542053.txt
docs/: ARCHITECTURE.md  ARTIFACT_CONTRACT.md  MONETIZATION_MODEL.md  PRODUCT_OVERVIEW.md  ROADMAP.md  UI_SURFACE.md
src/analyst_agent/: __main__.py  analyze.py  anomalies.py  ask.py  cleanup.py  cli.py  ingest.py  llm_placeholder.py  models.py  orders_policy.py  paths.py  policy.py  policy_registry.py  project.py  run_orchestrator.py  sales_policy.py  session.py  utils.py
test_data/: synth_orders.csv
tests/: conftest.py  test_anomalies_normalized_contract.py  test_ask_plan_and_answer.py  test_fallback_eda_html.py  test_llm_interpretation_fallback.py  test_orders_v1_golden.py  test_plan_validation.py  test_policy_describe_contract.py  test_sales_v1_golden.py
tests/fixtures/: orders_normal.csv  (+6 more)
tools/: generate_synth_orders.py
(+31 files in other folders)
